Fixed issue on submit button safari

--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -3,7 +3,7 @@
   padding-left: 10px;
   border-radius: 30px;
   border: solid 5px #ff729f;
-  height: 3.2em; 
+  height: 50px; 
   display: flex;
   align-items: center;
   box-sizing: border-box;
@@ -22,8 +22,8 @@
 }
 
 .submit {
-  height: 3.7em;
-  aspect-ratio: 1/1;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
   background-color: white;
   border: solid 5px #ff729f;
